# Analytics-Project

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
docs/architecture/: architecture-pack-v1.1.md  dependency-policy-v1.1.md  dependency-rules-v1.1.md  file-size-rules-v1.1.md  quantitative-analysis-design-v1.1.md  statistical-validation-strategy-v1.1.md
docs/contracts/: artifact-contracts.md  cache-contracts.md  contracts-index-v1.1.md  interface-map-v1.1.md  visual-artifact-contracts.md
docs/prompts/: contract-build-template.md  implementation-guardrails.md  stable-cached-context.md
docs/testing/: architecture-test-plan-v1.1.md  contract-test-plan-v1.1.md  integration-test-plan-v1.1.md  performance-smoke-test-plan-v1.1.md  profile-only-mvp-checkpoint.md
src/analytics_platform/: __init__.py
src/analytics_platform/artifact_store/: __init__.py
src/analytics_platform/associations/: __init__.py  diagnostics.py
src/analytics_platform/backends/: __init__.py  duckdb_catalog.py  duckdb_connection.py  duckdb_query_runner.py  polars_backend.py  registry.py  runtime_backend.py
src/analytics_platform/cache/: __init__.py  fingerprint_cache.py  invalidation_manager.py
src/analytics_platform/catalog/: __init__.py  dataset_registry.py  lineage_store.py
src/analytics_platform/cli/: __init__.py  app.py
src/analytics_platform/config/: __init__.py
src/analytics_platform/contracts/: __init__.py  artifacts.py  associations.py  cache.py  common.py  datasets.py  execution.py  features.py  joins.py  lineage.py  modeling.py  pipeline.py  profiling.py  quality.py  registry.py  reporting.py  schemas.py  semantics.py  statistics.py  validation.py  visuals.py
src/analytics_platform/core/: __init__.py  limits.py  paths.py
src/analytics_platform/features/: __init__.py  builder.py  leakage_checker.py  missing_value_handler.py
src/analytics_platform/io/: __init__.py  local_reader.py
src/analytics_platform/joins/: __init__.py  conflict_resolver.py  safe_join_executor.py  validator.py
src/analytics_platform/modeling/: __init__.py  diagnostics.py  ols_fitter.py  ols_validator.py
src/analytics_platform/pipeline/: __init__.py  profile_flow_executor.py  profile_flow_plan.py  profile_orchestrator.py  run_manifest.py
src/analytics_platform/profiling/: __init__.py  lazy_profile_plan.py  profiler.py  summaries.py
src/analytics_platform/quality/: __init__.py  data_quality.py  missingness.py
src/analytics_platform/reporting/: __init__.py  markdown_renderer.py  profile_report_builder.py  profile_sections.py  report_bundle_builder.py  report_renderer.py
src/analytics_platform/schema/: __init__.py  inference.py  validation.py
src/analytics_platform/semantics/: __init__.py  inference.py
src/analytics_platform/visualization/: __init__.py  chart_artifact.py  renderer.py  spec_compiler.py  table_artifact.py
tests/: conftest.py  test_artifact_store.py  test_backend_registry.py  test_config_loader.py  test_core_infrastructure.py  test_core_paths_and_limits.py  test_io_format_detection.py  test_local_reader.py  test_polars_backend.py  test_runtime_dataset_store.py
tests/architecture/: test_domain_backend_artifact_boundary.py  test_file_size_and_import_boundary.py  test_reporting_boundary.py  test_required_modules_present.py
tests/contracts/: config_pipeline_compat.py  execution_dataset_compat.py  execution_limits_backend_compat.py  test_artifact_contracts.py  test_associations_contracts.py  test_cache_contracts.py  test_common_contracts.py  test_compatibility_47_to_50.py  test_contracts_package_exports.py  test_datasets_contracts.py  test_execution_limit_contracts.py  test_execution_reference_contracts.py  test_features_contracts.py  test_joins_contracts.py  test_lineage_contracts.py  test_materialization_contracts.py  test_modeling_contracts.py  test_pipeline_contracts.py  test_profiling_contracts.py  test_quality_contracts.py  test_registry_contracts.py  test_reporting_contracts.py  test_schemas_contracts.py  test_semantics_contracts.py  test_statistics_contracts.py  test_validation_contracts.py  test_visual_contracts.py
tests/fixtures/configs/: dirty_profile.yaml
tests/integration/: test_association_diagnostics.py  test_dirty_dataset_profile.py  test_profile_only_smoke.py  test_semantic_typing_smoke.py
tests/integration/backends/: test_duckdb_integration.py
tests/integration/features/: test_leakage_pipeline.py
tests/unit/associations/: test_diagnostics.py
tests/unit/cache/: test_fingerprint_cache.py
tests/unit/catalog/: test_dataset_registry.py
tests/unit/cli/: test_app.py
tests/unit/features/: test_leakage_checker.py  test_missing_value_handler.py
tests/unit/joins/: test_safe_join_executor.py
(+17 files in other folders)
